add github link to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,6 +25,7 @@
             {% endif %}
             {% endunless %}
           {% endfor %}
+          <a class="page-link" href="{{ site.github.owner_url }}">GitHub</a>
         </div>
       </nav>
     {%- endif -%}
