--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -5,6 +5,5 @@
   2. Customize default _includes/custom-head.html in your source directory and insert the given code snippet.
 {% endcomment %}
 
-<link rel="shortcut icon" type="image/x-icon" href="{{site.images}}/favicon.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="{{site.images}}favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="{{site.images}}favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
