--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,16 @@
 <header class="site-header">
+  <a class="site-title" href="{{ "/" | relative_url }}">Home</a>
+  <a href="{{ "/" | relative_url }}"> <img src="/media/BBB.gif" height="40px" /> </a>
+  
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
     {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
     {%- if titles_size > 0 -%}
       <nav class="site-nav">
+        {% comment %}
         <input type="checkbox" id="nav-trigger" class="nav-trigger" />
         <label for="nav-trigger">
           <span class="menu-icon">
@@ -16,15 +19,17 @@
             </svg>
           </span>
         </label>
+        {% endcomment %}
 
         <div class="trigger">   
-          {% for my_page in site.pages %}
-            {% unless my_page.exclude %}
-            {% if my_page.title %}
+          <a class="page-link" href="{{ "/" | relative_url }}">Home</a>
+          {%- for my_page in site.pages -%}
+            {%- unless my_page.exclude -%}
+            {%- if my_page.title -%}
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {% endif %}
-            {% endunless %}
-          {% endfor %}
+            {%- endif -%}
+            {%- endunless -%}
+          {%- endfor -%}
           <a class="page-link" href="{{ site.github.owner_url }}">GitHub</a>
         </div>
       </nav>
